--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,10 @@
   "author": "Caterina Paun",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.30.1",
     "node-static": "^0.7.11"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
